[package]
name = "sgxlib-ra"
version = "0.1.0"
authors = [ "Automata Authors" ]
edition = "2021"

[features]
default = ["std"]
sgx = ["sgxlib/sgx", "crypto/sgx"]
epid = ["sgx"]

dcap_std = ["sgx", "sgx-dcap-ql-rs/std", "sgx-dcap-quoteverify-rs/std"]
dcap = ["sgx", "sgx-dcap-ql-rs/tstd", "sgx-dcap-quoteverify-rs/tstd"]
std = ["sgx", "glog/std", "base/std", "serde/std", "eth_types/std", "net-http/std", "crypto/std", "base64/std", "serde_json/std", "jsonrpc/std", "rustls/std", "webpki/std", "solidity/std"]
tstd = ["sgx", "sgxlib/tstd", "glog/tstd", "base/tstd", "serde/tstd", "eth_types/tstd", "net-http/tstd", "crypto/tstd", "base64/tstd", "serde_json/tstd", "jsonrpc/tstd", "rustls/tstd", "webpki/tstd", "solidity/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false, features = ["types", "tkey_exchange"] }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
solidity = { git = "https://github.com/automata-network/solidity-rs", default-features = false }
serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
base64 = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
rustls = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
webpki = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

#sgx-dcap-ql-rs = { git = "https://github.com/automata-network/sgx-dcap-rs", default-features = false, optional = true }

memoffset     = { version = "0.5.4" }
base16 = { version = "0.2.1", features = ["alloc"], default-features = false }

sgx-dcap-ql-rs = { git = "https://github.com/automata-network/sgx-dcap-rs", default-features = false, optional = true }
sgx-dcap-quoteverify-rs = { git = "https://github.com/automata-network/sgx-dcap-rs", default-features = false, optional = true }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_backtrace_sys = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_build_helper = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tcrypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_ucrypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tprotected_fs = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }
